Revert "使用新的单元测试方法。"
This reverts commit b18aa2884562b7024c0af9b3ccd2844b5ca15c8b.