@@ -106,9 +106,6 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.5.1</version>
-        <configuration>
-          <argLine>--add-opens swift.jdbc/test.container=ALL-UNNAMED</argLine>
-        </configuration>
       </plugin>
     </plugins>
   </build>
